[project]
name = "knoto-training"
version = "0.1.0"
description = ""
authors = [
    {name = "whatphilipcodes",email = "gerdes.philip@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (==2.1.3)",
    "numba (>=0.61.0,<0.62.0)",
    "umap-learn (>=0.5.7,<0.6.0)",
    "datasets (>=3.4.0,<4.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

